@@ -23,6 +23,8 @@ Usercmd9= Usercmd9	 	 	 	 	 	 	 	 	 0	 15	 0	 1	 1	 0	 	 1	 	 -1	 0	 0	 0	 0	 0
 fileGroup1=tcl	
 files1=balloon.tcl
 files1=Canvas.tcl
+files1=chanprops.tcl
+files1=connprops.tcl
 files1=Data.tcl
 files1=Datadict.tcl
 files1=Drawitem.tcl
@@ -30,13 +32,17 @@ files1=drawopts.tcl
 files1=Fileview.tcl
 files1=Gned.tcl
 files1=icons.tcl
+files1=imptprops.tcl
 files1=Loadsave.tcl
 files1=Main.tcl
 files1=Makened.tcl
 files1=Menuproc.tcl
+files1=modprops.tcl
+files1=netwprops.tcl
 files1=parsened.tcl
 files1=Plotedit.tcl
 files1=props.tcl
+files1=submprops.tcl
 files1=Switchvi.tcl
 files1=textedit.tcl
 files1=tree.tcl
