@@ -159,3 +159,6 @@ Nov 11, 1999
   - begun writing Properties dialogs
 Nov 12, 1999
   - spreadsheet widget added
+Nov 13, 1999
+  - file props.tcl split to submprops.tcl, modprops.tcl, connprops.tcl,...
+    (6 files)
